--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "slss",
   "version": "1.0.0",
   "scripts": {
-    "dev": "golte dev; go build; ./slss"
+    "dev": "golte dev && go build",
+    "clean": "trash build"
   },
   "author": "core",
   "type": "module",
   "license": "MPL-2.0",
   "description": "",
   "dependencies": {
-    "golte": "^0.1.1",
-    "plyr": "^3.7.8"
+    "golte": "^0.1.1"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.5",
     "svelte-preprocess": "^6.0.3",
+    "trash-cli": "^6.0.0",
     "typescript": "^5.6.3"
   }
 }
