--- a/config.json.example
+++ b/config.json.example
@@ -3,5 +3,8 @@
     "default_admin_password": "admin",
     "db_path": "./slss.db",
     "storage_path": "./static",
-    "port": 8000
+    "port": 8000,
+    "webhook": {
+        "enabled": false
+    }
 }
